--- a/index.html
+++ b/index.html
@@ -1,172 +1,186 @@
 <!DOCTYPE html>
-<html lang="en" id="home">
+<html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Portfolio</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <!--Bootstrap -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!--Bootstrap icon-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
+    <!--My CSS-->
     <link rel="stylesheet" href="style.css" />
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
-    <![endif]-->
+    <title>Portfolio Iksal</title>
   </head>
-  <body>
-    <!-- navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle Navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-
-          <a href="#home" class="navbar-brand">Iksal Saputra</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">About</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
+  <body id="home">
+    <!--navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Iksal Saputra</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Gallery">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact Me</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
-    <!-- akhir navbar -->
+    <!--akhir navbar-->
+    <!--jumbotron-->
+    <section class="jumbotron text-center">
+      <img src="img/iksal.png" alt="iksal" width="160" class="rounded-circle" class="img-thumbnail" />
+      <h1 class="display-4">Iksal Saputra</h1>
+      <p class="lead fs-7">Student | SMKN 4 Bojonegoro</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#fff"
+          fill-opacity="1"
+          d="M0,96L34.3,112C68.6,
+        128,137,160,206,149.3C274.3,139,343,85,411,80C480,75,549,117,617,144C685.7,171,754,181,823,176C891.4,171,960,149,1029,165.3C1097.1,181,1166,235,1234,240C1302.9,245,1371,203,1406,181.3L1440,160L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!--akhir jumbotron-->
 
-    <!-- jumbotron -->
-    <div class="jumbotron text-center">
-      <img src="img/iksal.png" alt="" class="img-circle" />
-      <h1>Iksal Saputra</h1>
-      <p>PELAJAR | SMKN 4 BOJONEGORO</p>
-    </div>
-    <!-- akhir jumbotron -->
-
-    <!-- About -->
-    <section id="about" class="about">
+    <!--about-->
+    <section id="about">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h2 class="text-center">About</h2>
-            <hr />
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>About Me</h2>
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm-5 col-sm-offset-1">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi enim libero ratione non vero ipsa inventore, omnis similique a, in est cupiditate! Possimus consectetur autem neque voluptate reiciendis. Sed, dolorum!</p>
+        <div class="row justify-content-center fs-6 text-center">
+          <div class="col-md-4">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tenetur tempore ea iure quia a? Dolore quidem repudiandae modi! Soluta.</p>
           </div>
-          <div class="col-sm-5">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus explicabo repudiandae quo magnam sit doloremque enim deserunt amet pariatur perferendis. Veritatis voluptatem doloribus tempore unde aspernatur blanditiis nobis provident deserunt.</p>
+          <div class="col-md-4">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam veritatis nemo incidunt, ratione laboriosam id nobis? Libero ad eveniet voluptatum?</p>
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg col-12" viewBox="0 0 1440 320">
+        <path
+          fill="#a2edfa"
+          fill-opacity="1"
+          d="M0,160L34.3,170.7C68.6,181,137,203,206,202.7C274.3,203,343,181,411,197.3C480,213,549,267,617,261.3C685.7,256,754,192,823,186.7C891.4,181,960,235,1029,245.3C1097.1,256,1166,224,1234,218.7C1302.9,213,1371,235,1406,245.3L1440,256L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
+        ></path>
+      </svg>
     </section>
-    <!-- akhir about -->
-
-    <!-- Portfolio -->
-    <section class="portfolio" id="portfolio">
+    <!--akhir about-->
+    <!--gallery-->
+    <section id="Gallery">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h2 class="text-center">Portfolio</h2>
-            <hr />
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>My Gallery</h2>
           </div>
         </div>
-
-        <div class="row">
-          <div class="col-sm-4">
-            <a href="" class="thumbnail">
-              <img src="img/iksal.png" alt="" />
-            </a>
+        <div class="row justify-content-center">
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/1.png" class="card-img-top" alt="1" />
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus, adipisci!</p>
+              </div>
+            </div>
           </div>
-          <div class="col-sm-4">
-            <a href="" class="thumbnail">
-              <img src="img/iksal.png" alt="" />
-            </a>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/2.png" class="card-img-top" alt="2" />
+              <div class="card-body">
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, veritatis!</p>
+              </div>
+            </div>
           </div>
-          <div class="col-sm-4">
-            <a href="" class="thumbnail">
-              <img src="img/iksal.png" alt="" />
-            </a>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/3.png" class="card-img-top" alt="3" />
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, quibusdam?</p>
+              </div>
+            </div>
           </div>
-          <div class="col-sm-4">
-            <a href="" class="thumbnail">
-              <img src="img/iksal.png" alt="" />
-            </a>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/4.png" class="card-img-top" alt="4" />
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, consequatur!</p>
+              </div>
+            </div>
           </div>
-          <div class="col-sm-4">
-            <a href="" class="thumbnail">
-              <img src="img/iksal.png" alt="" />
-            </a>
-          </div>
-          <div class="col-sm-4">
-            <a href="" class="thumbnail">
-              <img src="img/iksal.png" alt="" />
-            </a>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/5.png" class="card-img-top" alt="5" />
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, obcaecati.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,128L34.3,128C68.6,128,137,128,206,117.3C274.3,107,343,85,411,106.7C480,128,549,192,617,192C685.7,192,754,128,823,96C891.4,64,960,64,1029,90.7C1097.1,117,1166,171,1234,165.3C1302.9,160,1371,96,1406,64L1440,32L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
+        ></path>
+      </svg>
     </section>
-    <!-- akhir Portfolio -->
-
-    <!-- contact -->
-    <section class="contact" id="contact">
+    <!--akhir gallery-->
+    <!--contact-->
+    <section id="contact">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-12 text-center">
-            <h2>Contact</h2>
-            <hr />
+        <div class="row text-center">
+          <div class="col">
+            <h2>Contact Me</h2>
           </div>
         </div>
-
-        <div class="row">
-          <div class="col-sm-8 col-sm-offset-2">
-            <form action="" method="">
-              <div class="form-group">
-                <label for="nama">Nama</label>
-                <input type="text" class="form-control" name="nama" id="nama" placeholder="Masukkan Nama" />
+        <div class="row justify-content-center mb-3">
+          <div class="col-md-7">
+            <form>
+              <div class="mb-3">
+                <label for="name" class="form-label">Nama :</label>
+                <input type="text" class="form-control" id="name" aria-describedby="name">
               </div>
-              <div class="form-group">
-                <label for="email">Emai</label>
-                <input type="email" class="form-control" name="email" id="email" placeholder="Masukkan Email" />
+                <label for="email" class="form-label">Email :</label>
+                <input type="email" class="form-control" id="email" aria-describedby="email">
               </div>
-              <div class="form-group">
-                <label for="pesan">Pesan</label>
-                <textarea name="pesan" class="form-control" id="pesan" rows="10" placeholder="Masukkan pesan, saran, ataupun kritik"></textarea>
+              <div class="col-md-7 mb-3">
+                <label for="pesan" class="form-label">Pesan :</label>
+                <textarea class="form-control" id="pesan" rows="2"></textarea>
               </div>
+              <div class="col-md-7 mb-8">
               <button type="submit" class="btn btn-primary">Kirim</button>
             </form>
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,96L26.7,106.7C53.3,117,107,139,160,160C213.3,181,267,203,320,213.3C373.3,224,427,224,480,213.3C533.3,203,587,181,640,165.3C693.3,149,747,139,800,138.7C853.3,139,907,149,960,154.7C1013.3,160,1067,160,1120,160C1173.3,160,1227,160,1280,138.7C1333.3,117,1387,75,1413,53.3L1440,32L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>
     </section>
-    <!-- akhir contact -->
-
-    <!-- footer -->
-    <footer>
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-sm-12">
-            <p>&copy; copyright 2022 | built with <i class="glyphicon glyphicon-heart"></i> by <a href="http://instagram.com/iksal.sp">Iksal Saputra</a>.</p>
-          </div>
-        </div>
-      </div>
+    <!--akhir contact-->
+    <!--footer-->
+    <footer class="bg-primary text-white text-center pb-5">
+      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="http://instagram.com/iksal.sp" class="text-white fw-bold">Iksal Saputra</a> </p>
     </footer>
-    <!-- akhir footer -->
+    <!--akhir footer-->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
