--- a/index.html
+++ b/index.html
@@ -11,10 +11,23 @@
     <!--Bootstrap icon-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
-    <!--My CSS-->
-    <link rel="stylesheet" href="style.css" />
     <title>Portfolio Iksal</title>
   </head>
+
+  <style>
+    .jumbotron {
+       padding-top: 6rem;
+       background-color: #e2edff;
+    }
+    #Gallery {
+       background-color: #e2edff;
+    }
+    section {
+       padding-top: 5rem;
+    }
+
+  </style>
+  
   <body id="home">
     <!--navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
